# fast-api-lms

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPROVEMENTS.md  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/versions/: 51e0dadf6af0_.py  f94b958596d0_.py
api/: __init__.py  courses.py  sections.py  users.py
api/utils/: __init__.py  courses.py  users.py
db/: db_setup.py
db/models/: __init__.py  course.py  mixins.py  user.py
pydantic_schemas/: course.py  user.py
