[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["faisalmaqbool3022 <faisal.maqbool@ylinx.pk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.3"}
fastapi-admin = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
