[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = "A Learning Management System (LMS) built with FastAPI and SQLAlchemy"
authors = ["Faisal Maqbool <faisal.maqbool@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["fastapi", "lms", "learning", "management", "system"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.0.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''